apps/mariadb/base/phpmyadmin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin-ingress
  namespace: mysql-ns
spec:
  entryPoints:
    - websecure  # o 'web', según tu Traefik config
  routes:
    - match: Host(`mysql.migbertweb.xyz`)
      kind: Rule
      services:
        - name: phpmyadmin-service
          port: 80
  tls:
    secretName: phpmyadmin-tls
